fixed dark mode for order list in blog posts

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,4 +21,14 @@
   svg {
     @apply transition-all ease-in-out duration-300;
   }
+
+  ol {
+    font-size: 14px;
+    @apply font-Baskerville;
+    @apply dark:text-gray-300;
+  }
+
+  strong {
+    @apply dark:text-gray-300;
+  }
 }
